--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
-
-
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +19,7 @@
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mongod": "^2.0.0",
     "mongoose": "^6.2.7"
   },
   "devDependencies": {
