--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
+    "@mui/styles": "^5.5.1",
     "@pathofdev/react-tag-input": "^1.0.7",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
