--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
