--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@uppy/core": "^2.1.8",
+    "@uppy/dashboard": "^2.1.4",
+    "@uppy/xhr-upload": "^2.0.7",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
